added matchscore to dto